test/classes/deitz/test_type_constructor_error2.chpl
class C {
  type t;
  var x: t;
}

var c = new C(int, 1);
writeln(c);
